fixed spacing issues according to PR feedback

--- a/src/components/Office/PaymentRequestCard/PaymentRequestCard.module.scss
+++ b/src/components/Office/PaymentRequestCard/PaymentRequestCard.module.scss
@@ -4,6 +4,18 @@
 
 .PaymentRequestCard {
   @include u-margin-x(0);
+  @include u-padding-x(4);
+  @include u-padding-top(3);
+  @include u-padding-bottom(2);
+  @include u-margin-y(4);
+  &:first-of-type {
+    @include u-margin-top(3);
+    @include u-margin-bottom(4);
+  }
+  &:last-of-type {
+    @include u-margin-top(4);
+    @include u-margin-bottom(3);
+  }
 }
 
 .summary {
@@ -93,7 +105,7 @@
 
 .footer {
   @include u-display(flex);
-  @include u-margin-y(2);
+  @include u-margin-top(2);
   align-items: center;
 
   dl {
@@ -132,6 +144,10 @@
   svg {
     margin-right: 0.5em;
   }
+
+  button {
+    @include u-padding-x(0);
+  }
 }
 
 .drawer {
@@ -139,6 +155,7 @@
   padding-left: 7.2rem;
   padding-right: 7.2rem;
   @include u-padding-y(5);
+  @include u-margin-top(2);
 }
 
 .docs-icon {
